--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:mysql://localhost/wechat?characterEncoding=utf8&useSSL=false
   jpa:
     show-sql: true
-#server:
-#  servlet:
-#    context-path: /sell
+  jackson:
+    default-property-inclusion: non_null
+server:
+    context-path: /sell
